[package]
name = "rtodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
sled = { version = "0.34.7"}
serde = "1.0"
serde_derive = "1.0"
colored = "2"
anyhow = "1.0"